Bug 1328106 - check IPC state before sending event; r=jdm

MozReview-Commit-ID: CeWCIG0dyKS